Updated tests to cover the new init_v2.gradle integration